@@ -6,6 +6,9 @@
      [regress/multiplex.sh]
      Remove datafile between and after tests, kill sshd rather than wait;
      ok djm@
+   - dtucker@cvs.openbsd.org 2004/06/17 06:00:05
+     [regress/multiplex.sh]
+     Use DATA and COPY for test data rather than hard-coded paths; ok djm@
 
 20040616
  - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
@@ -1260,4 +1263,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3400 2004/06/17 06:27:43 dtucker Exp $
+$Id: ChangeLog,v 1.3401 2004/06/17 06:32:45 dtucker Exp $
